--- a/public/css/loading.css
+++ b/public/css/loading.css
@@ -38,15 +38,22 @@
 .box-content a:hover {
   color: #c9c9c9;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1220px) {
+  .box {
+    width: 100%;
+    max-width: 500px;
+  }
   .loading-grid {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .box img {
+    width: 100%;
+    height: 400px;
   }
 }
 
 @media (max-width: 600px) {
   .loading-grid {
-    grid-template-columns: 1fr;
     padding: 20px;
   }
 
