--- a/public/css/search.css
+++ b/public/css/search.css
@@ -50,18 +50,13 @@
     grid-template-columns: repeat(4, 1fr);
   }
 }
-@media (max-width: 1100px) {
+@media (max-width: 1220px) {
   .result-cont {
     grid-template-columns: repeat(3, 1fr);
   }
 }
 @media (max-width: 768px) {
   .result-cont {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media (max-width: 500px) {
-  .rec-container {
     grid-template-columns: repeat(1, 1fr);
   }
 }
